[MODORDERS-927] - Handle and update ISBN on fly when updating POL