@@ -1,6 +1,7 @@
 package org.folio.service.orders.utils;
 
 import org.apache.commons.lang3.StringUtils;
+import org.folio.rest.core.exceptions.HttpException;
 import org.folio.rest.jaxrs.model.CompositePoLine;
 import org.folio.rest.jaxrs.model.ProductId;
 
@@ -12,7 +13,8 @@ import java.util.function.Predicate;
 import java.util.stream.Collectors;
 
 import static java.util.stream.Collectors.groupingBy;
-import static java.util.stream.Collectors.toList;
+import static org.apache.commons.lang3.StringUtils.SPACE;
+import static org.folio.rest.core.exceptions.ErrorCodes.ISBN_NOT_VALID;
 
 public class ProductIdUtils {
 
@@ -21,7 +23,7 @@ public class ProductIdUtils {
   public static Set<String> buildSetOfProductIdsFromCompositePoLines(List<CompositePoLine> compositePoLines, String isbnTypeId) {
     List<ProductId> productIds = compositePoLines.stream()
       .flatMap(pol -> pol.getDetails().getProductIds().stream())
-      .collect(Collectors.toList());
+      .toList();
     return buildSetOfProductIds(productIds, isbnTypeId);
   }
 
@@ -34,6 +36,11 @@ public class ProductIdUtils {
 
   public static boolean isISBN(String isbnTypeId, ProductId productId) {
     return Objects.equals(productId.getProductIdType(), isbnTypeId);
+  }
+
+  public static boolean isISBNValidationException(Throwable throwable) {
+    return throwable instanceof HttpException httpException
+      && httpException.getError().equals(ISBN_NOT_VALID.toError());
   }
 
   public static void removeISBNDuplicates(CompositePoLine compPOL, String isbnTypeId) {
@@ -49,17 +56,11 @@ public class ProductIdUtils {
   }
 
   public static  String extractProductId(String value) {
-    if (value == null || !value.contains(" ")) {
-      return value;
-    }
-    return value.substring(0, value.indexOf(" "));
+    return StringUtils.substringBefore(value, SPACE);
   }
 
   public static  String extractQualifier(String value) {
-    if (value == null || !value.contains(" ")) {
-      return null;
-    }
-    return value.substring(value.indexOf(" ") + 1);
+    return StringUtils.substringAfter(value, SPACE);
   }
 
   private static Predicate<ProductId> isUniqueISBN(List<ProductId> productIds) {
@@ -69,7 +70,7 @@ public class ProductIdUtils {
   private static List<ProductId> getNonISBNProductIds(List<ProductId> productIds, String isbnTypeId) {
     return productIds.stream()
       .filter(productId -> !isISBN(isbnTypeId, productId))
-      .collect(toList());
+      .toList();
   }
 
   private static List<ProductId> getDeduplicatedISBNs(List<ProductId> productIds, String isbnTypeId) {
@@ -81,6 +82,6 @@ public class ProductIdUtils {
     return uniqueISBNProductIds.values().stream()
       .flatMap(uniqueProductIds -> uniqueProductIds.stream()
         .filter(isUniqueISBN(uniqueProductIds)))
-      .collect(toList());
+      .toList();
   }
 }
